# MarlOS

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLI_GUIDE.md  COMPLETE_FIX_SUMMARY.md  CONTRIBUTING.md  FINAL_UPDATE_SUMMARY.md  INSTALL.md  INSTALLATION_IMPROVEMENTS_SUMMARY.md  INSTALL_FOR_FRIENDS.md  LICENSE  MANIFEST.in  PLAN.md  PROJECT_STRUCTURE.md  PYPI_PUBLISHING_GUIDE.md  README.md  SHARE.md  agent-config.yml  benchmark_output.txt  demo_checkpoint_recovery.py  demo_recovery_with_checkpoint.py  docker-compose.yml  pyproject.toml  real_throughput_benchmark.py  requirements-docker.txt  requirements.txt  setup.py  test_job.json  test_submit.py  text.txt
.claude/: settings.local.json
.claude/commands/: audit.md  fix.md  run-tests.md  start-agent.md  (+1 more)
agent/: config.py  main.py
cli/: __main__.py  main.py  marlOS.py
config/: __init__.py  mosquitto.conf
dashboard/: index.html  package-lock.json  package.json
docker/: Dockerfile.agent  Dockerfile.agent.optimized
docs/: API_GUIDE.md  CHECKPOINT_RECOVERY_GUIDE.md  CHECKPOINT_SUMMARY.md  CLI_GUIDE.md  COMMANDS.md  CONFIG_ARCHITECTURE.md  CONFIG_MANAGEMENT_GUIDE.md  CROSS_INTERNET_DISCOVERY.md  DEPLOYMENT.md  DEPLOYMENT_VERIFICATION.md  DISTRIBUTED_DEPLOYMENT.md  ECONOMIC_WHITEPAPER.md  FULL_CONFIG_USAGE.md  INSTALL.md  INTEGRATION_GUIDE.md  LAB_SETUP.md  LOCAL_TESTING.md  NETWORK_DESIGN.md  PATH_SETUP_QUICK_REFERENCE.md  PLUGINS.md  PREDICTIVE_CONFIG.md  README.md  SESSION_SUMMARY.md  SOURCE_AND_AGENT_CHECK_FEATURE.md
examples/: __init__.py  docker_python.json  hello_shell.json  high_priority.json  light.json  port_scan.json
guides/: INTEGRATION_GUIDE.md
hardware/: __init__.py
marlos/: __init__.py  __main__.py
plugins/: example_runner.py
rl_trainer/: __init__.py  env.py  evalutate.py  speculation_env.py  train.py  train_speculation.py
scripts/: __init__.py  adversarial_demo.py  benchmark.py  build_and_test.bat  build_and_test.sh  demo.py  economic_simulation.py  install_windows.bat  install_windows.ps1  online_learning_proof.py  post_install.py  publish.py
test/: conftest.py  test_economic_fairness.py  test_economic_fairness_decay.py  test_economic_fairness_job_analyzer.py  test_economic_fairness_job_tracking.py  test_node_config.py  test_p2p_security.py  test_rl_fairness.py
throughput/: fair_benchmark.py  fair_benchmark_data_20251108_230628.json  fair_benchmark_report_20251108_230628.txt  marlos_benchmark_data_20251108_223732.json  marlos_benchmark_report_20251108_223732.txt  throughput_benchmark.py
(+115 files in other folders)
