[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marlos"
version = "1.1.1"
description = "Autonomous Distributed Computing Operating System with Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = ["distributed-computing", "reinforcement-learning", "p2p", "autonomous-systems", "blockchain", "economics"]
authors = [
  {name = "Team async_await", email = "ayushjadaun6@gmail.com"}
]
maintainers = [
  {name = "Ayush Jadaun", email = "ayushjadaun6@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: System :: Distributed Computing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Environment :: Console",
]

dependencies = [
  "click>=8.0.0",
  "rich>=13.0.0",
  "pyzmq>=25.0.0",
  "torch>=2.0.0",
  "stable-baselines3>=2.0.0",
  "gymnasium>=0.29.0",
  "numpy>=1.24.0",
  "websockets>=11.0.0",
  "aiohttp>=3.8.0",
  "cryptography>=41.0.0",
  "pynacl>=1.5.0",
  "pyyaml>=6.0.0",
  "httpx>=0.24.0",
  "mcp>=1.0.0",
  "docker>=6.0.0",
  "psutil>=5.9.0",
  "orjson>=3.9.0",
  "kademlia>=2.2.2",
  "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=23.0.0",
  "flake8>=6.0.0",
  "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ayush-jadaun/MarlOS"
Documentation = "https://github.com/ayush-jadaun/MarlOS/blob/main/README.md"
Repository = "https://github.com/ayush-jadaun/MarlOS"
"Bug Tracker" = "https://github.com/ayush-jadaun/MarlOS/issues"

[project.scripts]
marl = "cli.main:cli"

[tool.setuptools.packages.find]
include = ["agent*", "cli*", "marlos*", "rl_trainer*", "scripts*", "examples*"]
exclude = ["test*", "dashboard*", "docs*"]

[tool.setuptools.package-data]
agent = ["*.yml", "*.json"]
rl_trainer = ["*.zip", "*.pkl", "*.pt", "*.pth", "models/*.zip"]
config = ["*.conf", "*.yml", "*.yaml", "*.json"]
scripts = ["*.sh", "*.bat", "*.py"]
examples = ["*.py", "*.md"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "performance: marks tests as performance benchmarks (deselect with '-m not performance')",
]
